# PRAKTIKA

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  init.sh
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: documents.py  health.py  search.py
backend/app/core/: config.py  db.py  metrics.py
backend/app/models/: __init__.py  document.py
backend/app/schemas/: document.py  health.py  search.py
backend/app/services/: cache.py  chunker.py  es_client.py  extractor.py  indexer.py  validation.py
backend/tests/unit/: test_api.py  test_chunker.py  test_extractor.py  test_search_window.py  test_validation.py
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus.yml
docs/: API_CONTRACT.md  ARCHITECTURE.md  DEMO_GUI.md  REQUIREMENTS_TRACEABILITY.md  SELF_TEST_GUIDE.md  USER_GUIDE.md  ДНЕВНИК_ПРАКТИКИ.md  ПРЕЗЕНТАЦИЯ.md
docs/roles/: BE.md  DO.md  FE.md  QA.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: DocumentList.tsx  DropZone.tsx  EmptyState.tsx  Highlight.tsx  Pagination.tsx  ResultCard.tsx  SearchBar.tsx  (+2 more)
scripts/: make_fixtures.py
tests/e2e/: README.md  capture-demo.mjs  package-lock.json  package.json  playwright.config.ts
tests/fixtures/: README.md  lecture_databases.docx  notes.txt
tests/load/: REPORT.md  locustfile.py
tests/precision/: REPORT.md  eval.py  requirements.txt
(+6 files in other folders)
